--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,111 @@
-version: '3.8'
+version: '3.9'
+
 services:
-  postgres:
-    image: postgres:15
-    ports: ["5432:5432"]
+  # Zookeeper - Kafka coordination (optional with KRaft, but included for compatibility)
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    container_name: zk-1
     environment:
-      POSTGRES_DB: db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: example
-  mongodb:
-    image: mongo:5.0
-    ports: ["27017:27017"]
-  redis:
-    image: redis:7
-    ports: ["6379:6379"]
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_SERVER_ID: 1
+    ports:
+      - "2181:2181"
+    networks:
+      - tree-of-life
+    healthcheck:
+      test: ["CMD", "echo", "ruok", "|", "nc", "localhost", "2181"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Kafka Broker - Event Bus (1.2M msg/sec capacity)
+  kafka-broker-1:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka-1
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-1:29092,PLAINTEXT_HOST://kafka-broker-1:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_LOG_RETENTION_MS: 6912000000  # 80 days
+      KAFKA_LOG_SEGMENT_BYTES: 1073741824  # 1GB
+      KAFKA_NUM_NETWORK_THREADS: 8
+      KAFKA_NUM_IO_THREADS: 8
+      KAFKA_SOCKET_SEND_BUFFER_BYTES: 102400
+      KAFKA_SOCKET_RECEIVE_BUFFER_BYTES: 102400
+      KAFKA_SOCKET_REQUEST_MAX_BYTES: 104857600
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    networks:
+      - tree-of-life
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - kafka-data-1:/var/lib/kafka/data
+
+  # Kafka UI - Monitoring and Management
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    depends_on:
+      kafka-broker-1:
+        condition: service_healthy
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-broker-1:29092
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+    ports:
+      - "8080:8080"
+    networks:
+      - tree-of-life
+
+  # Application - Node.js Bootstrap Orchestrator
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: tree-of-life-app
+    depends_on:
+      kafka-broker-1:
+        condition: service_healthy
+    environment:
+      NODE_ENV: production
+      KAFKA_BROKERS: kafka-broker-1:29092
+      GRPC_HOST: app
+      GRPC_PORT: 50051
+      LOG_LEVEL: debug
+    ports:
+      - "3000:3000"
+      - "50051:50051"
+    networks:
+      - tree-of-life
+    volumes:
+      - ./agents:/app/agents
+      - ./logs:/app/logs
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('net').createConnection({port:50051},()=>process.exit(0))"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    stdin_open: true
+    tty: true
+
+networks:
+  tree-of-life:
+    driver: bridge
+
+volumes:
+  kafka-data-1:
+    driver: local
