--- a/package.json
+++ b/package.json
@@ -1,28 +1,70 @@
 {
   "name": "tree-of-life-system",
-  "version": "1.0.0",
-  "description": "Tree of Life System - Integration platform",
-  "main": "server.js",
+  "version": "2.4.0",
+  "description": "Enterprise autonomous multi-agent orchestration system with Kafka, gRPC, and ReWOO",
+  "main": "agents/bootstrap.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node agents/bootstrap.js",
+    "startup": "node agents/startup.js",
+    "startup:verbose": "DEBUG=* node agents/startup.js",
+    "dev": "nodemon agents/bootstrap.js",
+    "bootstrap": "node agents/bootstrap.js",
+    "docker:build": "docker build -t tree-of-life:2.4 .",
+    "docker:run": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
     "test": "jest",
-    "lint": "eslint ."
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:kafka": "node scripts/test-kafka.js",
+    "test:grpc": "node scripts/test-grpc.js",
+    "test:load": "node scripts/load-test.js",
+    "test:latency": "node scripts/latency-benchmark.js",
+    "lint": "eslint agents/**/*.js",
+    "lint:fix": "eslint agents/**/*.js --fix",
+    "format": "prettier --write 'agents/**/*.js'",
+    "docs:generate": "jsdoc -c jsdoc.json",
+    "health-check": "node scripts/health-check.js",
+    "metrics": "node scripts/metrics-collector.js"
   },
-  "keywords": ["tree", "life", "system", "integration"],
+  "keywords": [
+    "autonomous-agents",
+    "multi-agent-system",
+    "kafka",
+    "grpc",
+    "orchestration",
+    "rewoo",
+    "self-building-system"
+  ],
   "author": "Garrett Carrol",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "@grpc/grpc-js": "^1.9.14",
+    "@grpc/proto-loader": "^0.7.10",
+    "dotenv": "^16.3.1",
+    "events": "^3.3.0",
+    "kafkajs": "^2.2.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "@types/jest": "^29.5.11",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "eslint": "^8.55.0"
+    "jsdoc": "^4.0.3",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Garrettc123/tree-of-life-system.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Garrettc123/tree-of-life-system/issues"
+  },
+  "homepage": "https://github.com/Garrettc123/tree-of-life-system#readme"
 }
